# MetalSharp-Wine-Runtime-MacOS-Arm64

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  ROADMAP.md  components.lock.json
.github/: pull_request_template.md
.github/workflows/: ci.yml  release-verify.yml  release.yml
assets/macos/: MetalSharpRuntime.icns
cmake/: metalsharp-gem-wine.exports  patch-blink-gem.cmake  patch-dynarmic-windows-arm64.cmake
docs/: fixtures.md  i386-phase6-performance-report.md
docs/architecture/: arm64ec-arm64x-research-assessment.md  deterministic-vcpu-plan.md  gem-abi.md  guest-memory.md  issue-45-x86_64-guest-support-roadmap.md  pe-arm64x-parser.md  wine-gem-bridge.md
docs/release/: integrated-wine-package.md
release/: current.json  v0.1.0-ready.json
src/gem/: arm64ec_dynarmic.cpp  arm64ec_engine.c  context.c  (+15 more)
tests/: arm64ec_engine_conformance.cpp  arm64ec_target_test.c  arm64x_roundtrip_conformance.cpp  context_layout_test.c  context_test.c  gem_headers_cxx_test.cpp  i386_engine_conformance.c  i386_phase3_conformance.c  i386_phase4_conformance.c  i386_phase55_performance.c  i386_xsave_foundation_test.c  memory_page_isolation_test.cpp  memory_test.c  pe_arm64x_fixture_builder.c  pe_arm64x_fixture_builder.h  pe_arm64x_fuzz_test.c  pe_arm64x_malformed_test.c  pe_arm64x_test.c  wine_arm64x_conformance.cpp  wine_bridge_conformance.c  wine_i386_bridge_conformance.c  x64_engine_conformance.cpp  x86_64_architecture_test.c
tools/: audit_blink_embedding.py  audit_blink_memory_order.py  generate_arm64ec_thunk_fixture.py  pe_arm64x_probe.c
(+77 files in other folders)
